# lrcplusplus

./: README.md
Algorithm/binarySearch/: binarySearch.c
Algorithm/sort/BubbleSort/: bubbleSort.c
Android/AIDL/: Android-AIDL.md
Android/AIDL/MyaidlClent/: settings.gradle
Android/AIDL/MyaidlTest/: settings.gradle
Android/Audio/: AudioTrack.xmind
Android/Camera2Demo/app/: build.gradle
Android/CameraDemo/app/: build.gradle
Android/JniSort/: settings.gradle
Android/JniSort/app/: build.gradle
Android/MediaCodecTest/app/: build.gradle
Android/MyJNITest/: gradle.properties  settings.gradle
Android/MyJNITest/app/src/main/cpp/: CMakeLists.txt  myjni.cpp
Android/MyJNITest/app/src/main/cpp/include/: android_log.h
DataStruct/List/: list.cpp  list.h  main.cpp
base/bigEndandsmallEnd/: 1.cpp
base/default_inherited/: 1.cpp
base/functionTemplate/: 1.cpp
base/val_type/: 1.cpp
func/atoi/: 1.cpp
func/wavheader/: wavheader.cpp
interface/time_rgb/: matrixRGB.c  matrixRGB.h  timehandle.c  timehandle.h
jianzhiOffer/rebuildBinaryTree/: 1.cpp
leetcode/: 100-sametree.cpp  101-SymmetricTree.cpp  104-MaxinumDepth.cpp  704-BinarySearch.c
leetcode/array/: 14-LongestCommonPrefix.cpp  26-RemoveDuplicatesFromSortedArray.cpp  88-MergeSortedArray.cpp  test
leetcode/string/: 28-Implement strStr.cpp  67-AddBinary.cpp  8-StringToInteger.c  8-StringToInterger.cpp
linux/: LinuxKernelNote.md
minicCRT/: Makefile  entry.c  main.c  malloc.c  minicrt.h  printf.c  stdio.c  string.c  test.c
mytools/md5test/: wtestMD5.c
mytools/python_rename/: rename.py
(+89 files in other folders)
